# k8s-tui

./: Cargo.toml  INTEGRATION_PLAN.md  README.md
src/: app.rs  k8s_client.rs  main.rs  theme.rs
src/daemon/: daemon.rs
src/data/: mock.rs  mod.rs  model.rs
src/ui/: clusters.rs  detail.rs  footer.rs  header.rs  help.rs  logs.rs  mod.rs  table.rs
