[package]
name = "k8s-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["v1_31"] }
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.29.0"
rand = "0.8"
schemars = { version = "1" }
futures = "0.3.32"
